tests/errors/duplicate_pin_number.nm
component Foo {
    pin FOO: input = 1;
    pin BAR: input = 1;
}